--- a/public/coach.html
+++ b/public/coach.html
@@ -74,7 +74,27 @@
       const entryRef = doc(db, "journalEntries", entryId);
       const entrySnap = await getDoc(entryRef);
       if (entrySnap.exists()) {
-        entryBox.innerText = entrySnap.data().text || "No text found.";
+        const entryData = entrySnap.data();
+        const userId = entryData.userId;
+        let userEmail = "Unknown user";
+
+        if (userId) {
+          try {
+            const userDoc = await getDoc(doc(db, "users", userId));
+            if (userDoc.exists()) {
+              userEmail = userDoc.data().email || userEmail;
+            }
+          } catch (e) {
+            console.warn("Failed to fetch user email:", e);
+          }
+        }
+
+        entryBox.innerHTML = `
+          <div style="background:#f1fafa; padding:0.5em 1em; border-left:4px solid #2A6972; margin-bottom:0.5em;">
+            👤 <strong>${userEmail}</strong>
+          </div>
+          <div>${entryData.text || "No text found."}</div>
+        `;
       } else {
         entryBox.innerText = "Journal entry not found.";
         responseForm.style.display = "none";
