Reduce manifest textarea height by 20% for better mobile UX
- Decrease min-height from 60vh to 48vh (about 20% reduction)
- Adjust max-height from 80vh to 65vh for better proportion
- Maintain comfortable readability while reducing overwhelming size
- Keep existing font size, line-height, and padding optimizations

--- a/public/app.html
+++ b/public/app.html
@@ -1653,8 +1653,8 @@
       #outcomeInput,
       #oppositionInput,
       #planInput {
-        min-height: 60vh !important; /* About full screen height */
-        max-height: 80vh !important;
+        min-height: 48vh !important; /* Reduced by 20% from 60vh */
+        max-height: 65vh !important; /* Reduced by about 20% from 80vh */
         font-size: 16px !important;
         line-height: 1.7 !important;
         padding: 1.5em !important;
