Expand mobile calendar cells to prevent date blocking and overlap
- Increase cell dimensions from 52px to 60px for better readability
- Expand padding from 14px 6px to 18px 8px for more breathing room
- Add line-height 1.2 for better text spacing within cells
- Change overflow from hidden to visible to prevent text clipping
- Update both CSS and JavaScript styling for consistency
- Dates should now be fully visible and properly spaced on mobile

--- a/public/app.html
+++ b/public/app.html
@@ -1192,33 +1192,35 @@
       /* FORCE mobile calendar styling - override JavaScript inline styles */
       #calendarContainer td[style], 
       #calendarContainer th[style] {
-        padding: 14px 6px !important;
+        padding: 18px 8px !important;
         text-align: center !important;
         width: 14.28% !important; /* 100% / 7 days = equal width */
-        min-width: 52px !important;
-        height: 52px !important;
+        min-width: 60px !important;
+        height: 60px !important;
         box-sizing: border-box !important;
         border: 1px solid rgba(42,105,114,0.15) !important;
         vertical-align: middle !important;
         white-space: nowrap !important;
-        overflow: hidden !important;
+        overflow: visible !important;
         font-size: 16px !important;
+        line-height: 1.2 !important;
       }
       
       /* Also target without [style] attribute */
       #calendarContainer td, 
       #calendarContainer th {
-        padding: 14px 6px !important;
+        padding: 18px 8px !important;
         text-align: center !important;
         width: 14.28% !important;
-        min-width: 52px !important;
-        height: 52px !important;
+        min-width: 60px !important;
+        height: 60px !important;
         box-sizing: border-box !important;
         border: 1px solid rgba(42,105,114,0.15) !important;
         vertical-align: middle !important;
         white-space: nowrap !important;
-        overflow: hidden !important;
+        overflow: visible !important;
         font-size: 16px !important;
+        line-height: 1.2 !important;
       }
       
       /* Header styling */
