Fix calendar numbers floating outside grid cells
- Remove padding and use line-height matching cell height for perfect centering
- Set line-height to 60px to match cell height for vertical centering
- Change overflow back to hidden to prevent text escaping cells
- Add max-height constraint to prevent cell expansion
- Use display: table-cell for proper text alignment behavior
- Numbers should now be perfectly centered within each grid cell

--- a/public/app.html
+++ b/public/app.html
@@ -1192,35 +1192,39 @@
       /* FORCE mobile calendar styling - override JavaScript inline styles */
       #calendarContainer td[style], 
       #calendarContainer th[style] {
-        padding: 18px 8px !important;
+        padding: 0 !important;
         text-align: center !important;
         width: 14.28% !important; /* 100% / 7 days = equal width */
         min-width: 60px !important;
         height: 60px !important;
+        max-height: 60px !important;
         box-sizing: border-box !important;
         border: 1px solid rgba(42,105,114,0.15) !important;
         vertical-align: middle !important;
         white-space: nowrap !important;
-        overflow: visible !important;
+        overflow: hidden !important;
         font-size: 16px !important;
-        line-height: 1.2 !important;
+        line-height: 60px !important; /* Match height for perfect centering */
+        display: table-cell !important;
       }
       
       /* Also target without [style] attribute */
       #calendarContainer td, 
       #calendarContainer th {
-        padding: 18px 8px !important;
+        padding: 0 !important;
         text-align: center !important;
         width: 14.28% !important;
         min-width: 60px !important;
         height: 60px !important;
+        max-height: 60px !important;
         box-sizing: border-box !important;
         border: 1px solid rgba(42,105,114,0.15) !important;
         vertical-align: middle !important;
         white-space: nowrap !important;
-        overflow: visible !important;
+        overflow: hidden !important;
         font-size: 16px !important;
-        line-height: 1.2 !important;
+        line-height: 60px !important; /* Match height for perfect centering */
+        display: table-cell !important;
       }
       
       /* Header styling */
