--- a/public/index.html
+++ b/public/index.html
@@ -2686,6 +2686,7 @@
                 <a href="#sophy" class="nav-link">Meet Sophy</a>
                 <a href="#practitioners" class="nav-link">Practitioners</a>
                 <a href="#pricing" class="nav-link">Pricing</a>
+                <a href="/practitioner-portal.html" class="nav-link" style="font-weight: 600;">🩺 Practitioner Portal</a>
                 <a href="/app.html" class="nav-cta">Free During BETA Testing</a>
             </div>
         </div>
